--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   english_words: ^3.1.0
+  flutter_staggered_grid_view: ^0.3.2
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/images/startimg.jpg
+    - assets/images/banner.jpg
 
   fonts:
     - family: myIcon
