--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   english_words: ^3.1.0
+  path_provider: ^1.6.22
+  dio: ^3.0.10
   flutter_staggered_grid_view: ^0.3.2
 
 dev_dependencies:
